--- a/public/screen.html
+++ b/public/screen.html
@@ -16,7 +16,7 @@
         <script src="assets/js/axios/axios.min.js"></script>
         <script src="assets/js/screen.js"></script>
 
-        <title>Screen | Connessi al futuro</title>
+        <title>Screen | Malesci 2025</title>
     </head>
 
     <body room="" class="muted">
