--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="default">
         <meta name="theme-color" content="#19233e">
-        <meta name="apple-mobile-web-app-title" content="Connessi al futuro">
+        <meta name="apple-mobile-web-app-title" content="Convention Malesci 2025">
         <link rel="stylesheet" href="assets/fonts/fonts.css">
         <link rel="stylesheet" href="assets/css/participant/participant.min.css">
         <script src="assets/js/socket.io.min.js"></script>
@@ -18,7 +18,7 @@
         <script src="assets/js/axios/axios.min.js"></script>
         <script src="assets/js/participant.js"></script>
         
-        <title>Malesci 2025</title>
+        <title>Convention Malesci 2025</title>
     </head>
     <body>
         <header class="flex items-center justify-end">
