--- a/public/screen.html
+++ b/public/screen.html
@@ -6,7 +6,7 @@
         <meta name="viewport"
             content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
-        <meta name="apple-mobile-web-app-title" content="Screen | Connessi al futuro">
+        <meta name="apple-mobile-web-app-title" content="Screen | Convention Malesci 2025">
 
         <link rel="stylesheet" href="assets/fonts/fonts.css">
         <link rel="stylesheet" href="assets/css/screen/screen.min.css">
