--- a/public/moderator.html
+++ b/public/moderator.html
@@ -8,7 +8,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Moderator | Connessi al futuro">
+    <meta name="apple-mobile-web-app-title" content="Moderator | Convention Malesci 2025">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="assets/css/moderator/moderator.min.css">
     <script src="assets/js/socket.io.min.js"></script>
@@ -16,12 +16,12 @@
     <script src="assets/js/axios/axios.min.js"></script>
     <script src="assets/js/moderator.js"></script>
 
-    <title>Moderator | Connessi al futuro</title>
+    <title>Moderator | Convention Malesci 2025</title>
 </head>
 <body>
     <header class="py-10">
         <div class="container">
-            <img src="assets/img/moderator/main-logo.png" class="max-w-full mb-3" alt="Connessi al futuro" />
+            <img src="assets/img/moderator/main-logo.png" class="max-w-full mb-3" alt="Convention Malesci 2025" />
             <p class="text-center text-2xl text-white font-eurostileEx2 font-bold mb-5 room-name uppercase"></p>
         </div>
     </header>
